--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mongodb://localhost:27017/congestion_client_db"
+DATABASE_URL="mongodb://localhost:27017/congestion_client_db?replicaSet=rs0"
 JWT_SECRET="1SC?C.W3!@#"
