fix(env): supprimer le replicaSet de l'URL de la base de données et mettre à jour .gitignore pour inclure le dossier mongodb-data

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mongodb://localhost:27017/congestion_client_db?replicaSet=rs0"
+DATABASE_URL="mongodb://localhost:27017/congestion_client_db"
 JWT_SECRET="1SC?C.W3!@#"
